# VTSDKDemo

./: .gitignore  Cargo.toml  Package.swift  README.md
.github/workflows/: android-aar.yml  build-android-sample.yml  build-android-so.yml  build-headers.yml  build-ios-xcframework.yml  coverage.yml  macos-tests.yml  spm-release.yml
android-demo/: README.md  build.gradle  settings.gradle
android-demo/app/: build.gradle  proguard-rules.pro
android-demo/app/src/androidTest/java/com/example/vtsdkdemo/: UiTests.kt
android-demo/app/src/main/: AndroidManifest.xml
android-demo/app/src/main/cpp/: vtsdk_jni.cpp
android-demo/app/src/main/java/com/example/vtsdkdemo/: MainActivity.kt  (+1 more)
android-demo/app/src/main/res/layout/: activity_main.xml
android-sdk/: build.gradle  settings.gradle
android-sdk/vt-sdk-android/: build.gradle
android-sdk/vt-sdk-android/src/main/: consumer-rules.pro  proguard-rules.pro
android-sdk/vt-sdk-android/src/main/cpp/: CMakeLists.txt  vtsdk_jni.cpp
core/: Cargo.toml
core/src/: compare.rs  filters.rs  lib.rs  locate.rs  search.rs
docs/: ANDROID_PACKAGE.md  GUIA_UI_TESTES.md  SPM.md
ffi/: Cargo.toml  build.rs
ffi/include/: vt_sdk.h
ffi/src/: lib.rs
ios-demo/: README.md
ios-demo/VTSDKDemo/: ContentView.swift  Info.plist  PhotoPickerView.swift  VTSDKDemo-Bridging-Header.h  VTSDKDemoApp.swift
ios-demo/VTSDKDemo.xcodeproj/: project.pbxproj
ios-demo/VTSDKDemo.xcodeproj/xcshareddata/xcschemes/: VTSDKDemo-UI.xcscheme  VTSDKDemo.xcscheme
ios-demo/VTSDKDemoUITests/: VTSDKDemoUITests.swift
mock/: Cargo.toml
mock/src/: lib.rs
(+1 files in other folders)
